<resources>
    <string name="app_name">Countdown Timer</string>
    <string name="action_settings">Settings</string>
    <string name="no_timers">No Timers to show. Get started by adding one.</string>
    <string name="event_notification">Event Notification</string>
    <string name="clock_format">EE, MMM dd</string>
    <string name="click_to_add_event">Click + to add an event</string>
    <string name="normal_event">Normal Event</string>
    <string name="timer_state_to_reach"></string>
    <string name="timer_state_to_end">to End</string>
    <string name="percent" translatable="false">%1$1.1f%%</string>
    <string name="day">D</string>
    <string name="hour">H</string>
    <string name="minute">M</string>
    <string name="second">S</string>
    <string name="date">Date</string>
    <string name="remind_unit_now">now</string>
    <string name="remind_title">%1$s ended</string>
    <string name="show_completed_events">Show Completed Events</string>
    <string name="export_to_json">Export To Json</string>
    <string name="completed_events">Completed Events</string>
    <string name="add_event">Add event</string>
    <string name="edit_event">Edit event</string>
    <string name="event_name">Event title</string>
    <string name="source_optional">Source (optional)</string>
    <string name="select_image">Select image</string>
    <string name="event_image">Event image</string>
    <string name="invalid_event_name">Please enter a valid event name</string>
    <string name="end_date_in_past">End date cannot be in the past</string>
    <string name="external_delete_not_supported">External events can not be deleted here</string>
    <string name="enable_now_bar">Enable Now Bar</string>
    <string name="disable_now_bar">Disable Now Bar</string>
    <string name="reset_external_changes">Reset external changes</string>
    <string name="sync_calendars">Sync calendars</string>
    <string name="select_sync_calendars">Select calendars to sync</string>
    <string name="calendar_permission_needed">Calendar permission is required for sync</string>
    <string name="no_calendars_found">No calendars available for sync</string>
    <string name="now_bar_days_left">%1$d days left</string>
    <string name="export_success">Events exported: %1$s</string>
    <string name="export_failed">Could not export events</string>
    <plurals name="remind_unit_minute">
        <item quantity="one">in %1$d minute</item>
        <item quantity="other">in %1$d minutes</item>
    </plurals>
    <plurals name="remind_unit_hour">
        <item quantity="one">in %1$d hour</item>
        <item quantity="other">in %1$d hours</item>
    </plurals>
    <plurals name="remind_unit_day">
        <item quantity="one">in %1$d day</item>
        <item quantity="other">in %1$d days</item>
    </plurals>
    <plurals name="remind_unit_week">
        <item quantity="one">in %1$d week</item>
        <item quantity="other">in %1$d weeks</item>
    </plurals>
    <plurals name="remind_unit_second">
        <item quantity="one">%1$d second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>
</resources>
