<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/spacing_small">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_tiny">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_source_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/source_optional" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/event_image_preview"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/event_image"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CircleImage"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/event_pick_image"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:text="@string/select_image" />
    </LinearLayout>

</LinearLayout>
